# find-life

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
.github/workflows/: release.yml
src/find_life/: cli.py  init.py  search.py
